2023-11-21 Richard Frith-Macdonald <rfm@gnu.org>

	* Headers/GNUstepBase/GSVersionMacros.h: Added GS_UNIMPLEMENTED to
	mark methods and functions as unimplemented for compiler warnings
	and documentation. github #350

2023-11-14 Frederik Seiffert <frederik@algoriddim.com>

	* Source/NSURLRequest.m: Support deleting NSMutableURLRequest headers by
	calling setValue:forHTTPHeaderField: with nil value.
	* Headers/Foundation/NSURLRequest.h: Update method documentation.
	* Tests/base/NSURLRequest/basic.m: Extended NSMutableURLRequest tests.

2023-11-14 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSFileManager.m: Fix issue #292
	* Tests/base/NSFileManager/general.m: test for enumerator at URL
	* Source/NSNotificationCenter.m: fix indentation/style errors
	* Headers/GNUstepBase/GSBlocks.h: Add new macros for calling blocks
	which return a value.

2023-11-14 Richard Frith-Macdonald <rfm@gnu.org> Riccardo Mottola <rm@gnu.org>

	* Documentation/Base.gsdoc:
	* Documentation/ReleaseNotes.gsdoc:
	* Documentation/install.texi:
	* Headers/Foundation/NSBundle.h:
	* Headers/Foundation/NSCalendar.h:
	* Headers/Foundation/NSDate.h:
	* Headers/Foundation/NSDateFormatter.h:
	* Headers/Foundation/NSExpression.h:
	* Headers/Foundation/NSMetadata.h:
	* Headers/Foundation/NSNetServices.h:
	* Headers/Foundation/NSObject.h:
	* Headers/Foundation/NSOperation.h:
	* Headers/Foundation/NSRegularExpression.h:
	* Headers/Foundation/NSSortDescriptor.h:
	* Headers/Foundation/NSURLConnection.h:
	* Headers/Foundation/NSURLDownload.h:
	* Headers/Foundation/NSUserDefaults.h:
	* Headers/Foundation/NSZone.h:
	* Headers/GNUstepBase/GSObjCRuntime.h:
	* Headers/GNUstepBase/GSVersionMacros.h:
	* Headers/GNUstepBase/NSLock+GNUstepBase.h:
	* Headers/GNUstepBase/NSObject+GNUstepBase.h:
	* Source/Additions/GSObjCRuntime.m:
	* Source/DocMakefile:
	* Source/GSInvocation.h:
	* Source/GSPrivate.h:
	* Source/GSTLS.m:
	* Source/NSAppleEventDescriptor.m:
	* Source/NSAppleEventManager.m:
	* Source/NSAppleScript.m: